# wpipe

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  ASYNC_IMPLEMENTATION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTINUAR_COPILOT.sh  CONTRIBUTING.md  LICENSE  LINKEDIN_RELEASE_v2.1.0.md  LTS_POLICY.md  PHASE_1_FEATURES.md  PHASE_1_IMPLEMENTATION_SUMMARY.md  PHASE_2_3_ROADMAP.md  PHASE_2_COMPLETION_SUMMARY.md  PHASE_2_DOCUMENTATION_INDEX.md  PHASE_2_FEATURES.md  PHASE_2_STATUS.md  PLAN_DASHBOARD_VERSIONES.md  PROJECT_STATUS.md  PUBLIC_API.md  QUICK_START_PHASE2.md  README.md  README_GITHUB.md  RELEASE_NOTES.md  RELEASE_NOTES_v2.0_LTS.md  SBOM.md  TODO_DASHBOARD.md  USERS.md  _templates  batch_test.db  certificate_preview.html  check_sqlite_full.py  check_wsqlite.py  checkpoints_viaje.db  comparison_example.db  complex_test.db  conf.py  delete_test.db  (+42 more)
.agents/: skills-manifest.json
.agents/skills/excalidraw-diagram/references/: pyproject.toml  render_excalidraw.py  render_template.html
.gemini/: settings.json
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.qwen/: settings.json  settings.json.orig
configs/: PIPE-AE020E9C.yaml  PIPE-B32E535C.yaml
docs/: docker-compose.yml  requirements.txt  test_basic.db-shm  test_basic.db-wal
docs/source/: conf.py  (+12 more)
docs_pdf/: Makefile  README.md  wpipe_documentation.tex
example/: basic_demo.py  config.yaml  demo_microservice.py  launcher.py  launcher2.py  microservice.py  register.db  test.py
examples/: README.md  analisis_resumen.csv  batch_test.db  combined.db  complex_test.db  delete_test.db  ejemplo_avanzado.db  elemental.sh  example_01_basic_pipeline.py  example_02_api_pipeline.py  example_03_error_handling.py  example_04_nested_pipelines.py  example_06_yaml_config.py  example_pipeline.db  json_test.db  query_test.db  update_test.db  wpipe_dashboard.db
export_output/: pipeline_logs.csv  pipeline_logs.json  pipeline_statistics.json
extra_readmes/: 01_architecture_backend_core.md  02_communication_flow.md  03_microservice_design.md  04_logic_design.md  05_data_diagrams_models.md  06_usage_test_documentation.md  07_security_hardening_resiliency.md  08_deployment_ops_maintenance.md
output/: demo.db-shm  demo.db-wal  wpipe_dashboard.db-shm  wpipe_dashboard.db-wal
pipeline_configs/: Alert.yaml  AlertTest.yaml  E.yaml  E1.yaml  Exp.yaml  ExpTest.yaml  ExportMe.yaml  GapTest.yaml  LTS_Async_Test.yaml  Master.yaml  MasterTest.yaml  P1.yaml  Pipeline.yaml  Test.yaml  TestPipe.yaml  _init.yaml  _init2.yaml  analysis_test.yaml  checkpoint_demo.yaml  exp_test.yaml  export_target.yaml  export_v2.yaml  eyesdcar_pipeline.yaml  init_test.yaml  init_v2.yaml  log_export_demo.yaml  metrics_export_demo.yaml  p0.yaml  p1.yaml  p2.yaml  pipe1.yaml  query_test.yaml  test.yaml  test_analysis.yaml  test_async_basic.yaml  test_async_components.yaml  test_components.yaml  test_name.yaml  test_pipe.yaml  test_pipe_basic.yaml  (+8 more)
posters/: 01_LI_n8n_v1.md  02_LI_n8n_v2_visual.md  03_MED_n8n_v1.md  04_MED_n8n_v2.md  05_MED_n8n_v3.md  06_MED_n8n_v4.md  07_LI_Zapier_v1.md  08_LI_Zapier_v2.md  09_MED_Zapier_v1.md  100_RED_Cron_Horror_Stories.md  101_RED_Cron_Horror.md  102_IH_Cron_Reliability.md  103_IH_Cron_Stability.md  104_DZ_Cron_Legacy_Refactor.md  105_DZ_Cron_Legacy.md  106_DEV_Cron_GreenIT.md  107_DEV_Zen_Pythonic.md  108_RED_Zen_Philosophy.md  109_RED_Zen_Pipelines.md  10_MED_Zapier_v2.md  110_IH_Zen_Productivity_Metrics.md  111_IH_Zen_Productivity.md  112_DZ_Zen_Scalability_Patterns.md  113_DZ_Zen_Scalability.md  114_DEV_Zen_CleanCode.md  115_DEV_Docs_Automated.md  116_RED_Docs_Feedback.md  117_RED_Docs_Mermaid.md  118_IH_Docs_ROI.md  119_IH_Docs_Maintenance.md  11_LI_Make_v1.md  120_DZ_Docs_DeepDive.md  121_DZ_Docs_Standards.md  122_LI_Luigi_Resilience.md  123_MED_Luigi_Resilience.md  124_DEV_Luigi_Zen.md  125_RED_Luigi_Green.md  126_IH_Luigi_Business.md  127_DZ_Luigi_Architecture.md  128_LI_Dagster_Resilience.md  (+222 more)
test/: README.md  conftest.py  test_95_ultimate_boost.py  test_all_examples.py  test_api_client.py  test_api_pipeline.py  test_async.py  test_background.py  test_basic_pipeline.py  test_checkpoint.py  test_checkpoint_phase1.py  test_composition_phase2.py  test_comprehensive_coverage.py  test_condition.py  test_core.py  test_coverage.py  test_coverage_boost.py  test_coverage_final_boost.py  test_dashboard.py  test_dashboard_and_monitor.py  test_decorators_phase2.py  test_examples_execution.py  test_exceptions.py  test_export.py  test_final_coverage.py  test_log.py  test_lts_90_coverage.py  test_lts_coverage_v2.py  test_lts_regression.py  test_misc.py  test_new_coverage.py  test_parallel_phase2.py  test_pipe.py  test_pipe_async.py  test_pipe_components.py  test_pipe_targeted.py  test_pipeline.py  test_ram.py  test_resource_monitor.py  test_resource_monitor_phase1.py  (+16 more)
wpipe/: README.md  __init__.py
(+1647 files in other folders)
