[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wpipe"
version = "0.1.7"
authors = [
    { name="wisrovi", email="wisrovi.rodriguez@gmail.com" },
]
description = "Pipeline con API"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "loguru",
    "pandas",
    "pyyaml",
    "tqdm",
    "prefect",
    "rich",
]


[project.urls]
"Homepage" = "https://github.com/wisrovi/wpipe"
"Bug Tracker" = "https://github.com/wisrovi/wpipe/issues"